fixed typo and added link

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             <li>4 eggs</li>
             <li>10 tablespoons cooking oil</li>
             <li>2 tablespoons soy sauce</li>
-            <li>2 tablespoons laoganma coolio oil with black beans</li>
+            <li>2 tablespoons <a target="_blank" href="https://www.amazon.com/Black-Bean-Chilli-Sauce-280g/dp/B0051D84GI">Laoganma chili oil with black beans</a></li>
           </ul>
         </section>
         <section class="col-6" id="instructions">
