vertically centered the description

--- a/index.html
+++ b/index.html
@@ -240,12 +240,14 @@
     </header>
     <article>
       <section>
-        <div class="col-6" id="description">
+        <div class="col-6" id="description" style="position:relative;height:300px;">
           <h1>Ziqin Hu's Fried Rice</h1>
-          <h2>The best there is!</h2>
-          <p class="description">
-            Fried Rice the way Ziqin Hu does it!  <a href="https://en.wikipedia.org/wiki/Fried_rice">Fried Rice</a> is a common Chinese recipe, but my wife Ziqin Hu's is the best!
-          </p>
+          <div style="position:absolute;top:50%;transform:translateY(-50%);">
+            <h2>The best there is!</h2>
+            <p class="description">
+              Fried Rice the way Ziqin Hu does it!  <a href="https://en.wikipedia.org/wiki/Fried_rice">Fried Rice</a> is a common Chinese recipe, but my wife Ziqin Hu's is the best!
+            </p>
+          </div>
         </div>
         <div class="col-6">
           <div class="featured"> </div>
