made jherc load over https

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         &copy; 2016 Your Face
     </footer>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script type="text/javascript" src="http://herc-scripts.objects.cdn.dream.io/jHerc.min.js"></script>
+    <script type="text/javascript" src="https://herc-scripts.objects.cdn.dream.io/jHerc.min.js"></script>
     <script type="text/javascript">
       $.herc.configure({
           api_key: '2b7734e19bc8f8a4b61beb456a0a0deb76505733ffb9167f67e1914d7f85'
