--- a/W4D1/index.html
+++ b/W4D1/index.html
@@ -1,1 +1,1 @@
-<h1 style="font-family: sans-serif; color: mustard; background: purple;">I exist!</h1>
+<h1 style="font-family: sans-serif; color: darkgoldenrod; background: purple;">I exist!</h1>
