--- a/W6D5/npm/index.html
+++ b/W6D5/npm/index.html
@@ -3,8 +3,39 @@
 <head>
 	<title></title>
 	<script src="bundle.js"></script>
+	<style>
+		.container {
+			width: 50%;
+			padding: 0;
+			margin: 0;
+		}
+
+		.container:after {
+			content: "";
+			display: block;
+			clear: both;
+		}
+
+		.col-1-2 {
+			width: 50%;
+			float: left;
+			padding: 0;
+			margin: 0;
+		}
+
+		.col-1 {
+			width: 100%;
+			float: left;
+			padding: 0;
+			margin: 0;
+		}
+
+		input {
+			width: 100%;
+		}
+	</style>
 </head>
 <body>
-	<div id='root'/>
+	<div id='main'/>
 </body>
 </html>
